# zendoo-sc-cryptolib

./: .gitignore  .travis.settings.xml  .travis.yml  AUTHORS  BUILD.md  Cargo.toml  README.md  build_jar.sh  sample.pom.xml
.cargo/: audit.toml
api/: Cargo.toml  sample_proof  sample_proof_no_bwt  sample_vk  sample_vk_no_bwt
api/src/: bitvector_smt.rs  cctp_calls.rs  exception.rs  ginger_calls.rs  jni_wrapper.rs  lib.rs  type_mapping.rs  utils.rs  zip_bitvector.rs
api/src/cctp_calls/: cert.rs  csw.rs  mod.rs  naive_threshold_sig.rs
api/src/error/: mod.rs
api/src/rust_jni/: cert.rs  commitment_tree.rs  csw.rs  fwt.rs  mod.rs  naive_threshold_sig.rs  proving_system.rs  utils.rs  utxo.rs
api/src/zenbox_smt/: bitvector_smt.rs  jni_calls.rs  mod.rs
ci/: .dockerignore  Dockerfile  README.md  build_jar.sh  check_tag.sh  entrypoint.sh  publish.sh  script.sh  set_version.sh  setup_env.sh  start_ci.sh
ci/devtools/: lint_pom.xml.sh  run_locally.sh  set_version.sh
ci/docker/: entrypoint.sh
ci/tests/: 000-cargo-test-clean.sh  001-cargo-build.sh  002-cargo-audit.sh  003-mvn-build-test-publish.sh  003-mvn-build-test.sh
circuit/: Cargo.toml
circuit/src/: lib.rs
circuit/src/constants/: constants.rs  mod.rs
demo-circuit/: Cargo.toml
demo-circuit/src/: lib.rs  test_utils.rs  type_mapping.rs  utils.rs
demo-circuit/src/blaze_csw/: data_structures.rs  mod.rs
demo-circuit/src/blaze_csw/constraints/: data_structures.rs  mod.rs
demo-circuit/src/common/: data_structures.rs  mod.rs
demo-circuit/src/common/constraints/: mod.rs
demo-circuit/src/constants/: constants.rs  mod.rs  old_circuit_keys.rs  personalizations.rs
demo-circuit/src/naive_threshold_sig/: mod.rs  tests.rs
demo-circuit/src/naive_threshold_sig_w_key_rotation/: data_structures.rs  mod.rs
demo-circuit/src/naive_threshold_sig_w_key_rotation/constraints/: data_structures.rs  mod.rs
demo-circuit/src/naive_threshold_sig_w_key_rotation/tests/: first_cert.rs  mod.rs  next_cert.rs  utils.rs  verify.rs
demo-circuit/src/pgd_csw/: data_structures.rs  mod.rs
demo-circuit/src/pgd_csw/constraints/: data_structures.rs  mod.rs
demo-circuit/src/sc2sc/: mod.rs  tests.rs
doc/: GenericThresholdCircuit.md
jni/: .gitignore  pom.xml
jni/src/main/java/com/horizen/certnative/: BackwardTransfer.java  CreateProofResult.java  NaiveThresholdSigProof.java  NaiveThresholdSignatureWKeyRotation.java  WithdrawalCertificate.java
jni/src/main/java/com/horizen/commitmenttree/: CommitmentTree.java  CustomBitvectorElementsConfig.java  CustomFieldElementsConfig.java  ScAbsenceProof.java  ScExistenceProof.java
jni/src/main/java/com/horizen/commitmenttreenative/: CommitmentTree.java  CustomBitvectorElementsConfig.java  CustomFieldElementsConfig.java  ScAbsenceProof.java  ScCommitmentCertPath.java  ScExistenceProof.java
jni/src/main/java/com/horizen/cswnative/: CswFtProverData.java  CswProof.java  CswSysData.java  CswUtxoProverData.java
jni/src/main/java/com/horizen/fwtnative/: FordwardTransferOutput.java  ForwardTransferOutput.java
jni/src/main/java/com/horizen/librustsidechains/: Constants.java  FieldElement.java  Library.java  PublicKeyUtils.java  SecretKeyUtils.java  Utils.java
jni/src/main/java/com/horizen/merkletreenative/: BigLazyMerkleTree.java  BigMerkleTree.java  InMemoryAppendOnlyMerkleTree.java  InMemoryLazySparseMerkleTree.java  InMemoryOptimizedMerkleTree.java  InMemorySparseMerkleTree.java  MerklePath.java  PositionLeaf.java  RandomAccessMerkleTree.java  ZenBoxMerkleTree.java
jni/src/main/java/com/horizen/poseidonnative/: PoseidonHash.java  PoseidonHashable.java  UpdatablePoseidonHash.java
jni/src/main/java/com/horizen/provingsystemnative/: CreateProofResult.java  ProvingSystem.java  ProvingSystemException.java  ProvingSystemType.java
jni/src/main/java/com/horizen/sc2scnative/: Sc2Sc.java  Sc2ScProof.java
jni/src/main/java/com/horizen/schnorrnative/: SchnorrKeyGenerator.java  SchnorrKeyPair.java  SchnorrPublicKey.java  SchnorrSecretKey.java  SchnorrSignature.java  ValidatorKeysUpdatesList.java
jni/src/main/java/com/horizen/scutxonative/: ScUtxoOutput.java
jni/src/main/java/com/horizen/sigproofnative/: BackwardTransfer.java  CreateProofResult.java  NaiveThresholdSigProof.java
jni/src/main/java/com/horizen/snarknative/: SnarkProof.java
jni/src/main/java/com/horizen/vrf/: VRFKeyGenerator.java  VRFLibrary.java  VRFProof.java  VRFPublicKey.java  VRFSecretKey.java  VrfFunctions.java  VrfFunctionsImpl.java
jni/src/main/java/com/horizen/vrfnative/: VRFKeyGenerator.java  VRFKeyPair.java  VRFOutput.java  VRFProof.java  VRFProveResult.java  VRFPublicKey.java  VRFSecretKey.java
jni/src/test/java/com/horizen/: TestUtils.java
jni/src/test/java/com/horizen/certnative/: NaiveThresholdSigProofTest.java  NaiveThresholdSignatureWKeyRotationProofTest.java  WithdrawalCertificateTest.java
jni/src/test/java/com/horizen/commitmenttree/: CommitmentTreeTest.java
jni/src/test/java/com/horizen/commitmenttreenative/: CommitmentTreeTest.java  ScCommitmentCertPathTest.java
jni/src/test/java/com/horizen/cswnative/: CswProofTest.java
jni/src/test/java/com/horizen/fwtnative/: ForwardTransferOutputTest.java
jni/src/test/java/com/horizen/librustsidechains/: FieldElementTest.java  LibraryTest.java  PublicKeyUtilsTest.java  SecretKeyUtilsTest.java  UtilsTest.java
jni/src/test/java/com/horizen/merkletreenative/: MerkleTreeTest.java
jni/src/test/java/com/horizen/poseidonnative/: PoseidonHashTest.java
jni/src/test/java/com/horizen/sc2scnative/: Sc2ScProofTest.java  Sc2ScTest.java
jni/src/test/java/com/horizen/schnorrnative/: SchnorrKeyGeneratorTest.java  SchnorrKeyPairTest.java  SchnorrPublicKeyTest.java  SchnorrSecretKeyTest.java  SchnorrSignatureTest.java
jni/src/test/resources/: bad_proof  bad_public_inputs  good_proof  good_public_inputs  sample_vk  testLeaves  vk
librustsidechains/: .gitignore  Cargo.toml
librustsidechains/src/: lib.rs
ouroboros/: Cargo.toml
ouroboros/src/: lib.rs
ouroboros/src/vrf/: mod.rs
zendoo-sc-crypto/: Cargo.toml
zendoo-sc-crypto/src/: lib.rs
(+10 files in other folders)
