[workspace]

members = ["demo-circuit", "ouroboros", "api"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = "unwind"

[profile.dev]
opt-level = 3
panic = "unwind"

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
panic = "unwind"