[workspace]

members = ["demo-circuit", "ouroboros", "api"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = "unwind"

[profile.dev]
opt-level = 0
panic = "unwind"

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = false
debug = false
panic = "unwind"

# Uncomment these lines for local development paths

#[patch.'https://github.com/HorizenOfficial/ginger-lib.git']
#algebra = { path = '../ginger-lib/algebra' }
#algebra-utils = { path = '../ginger-lib/algebra-utils' }
#primitives = { path = '../ginger-lib/primitives' }
#r1cs-core = { path = '../ginger-lib/r1cs/core' }
#r1cs-crypto = { path = '../ginger-lib/r1cs/gadgets/crypto' }
#r1cs-std = { path = '../ginger-lib/r1cs/gadgets/std' }
#proof-systems = { path = '../ginger-lib/proof-systems' }
#
#[patch.'https://github.com/HorizenLabs/marlin.git']
#marlin = { path = '../marlin' }
#
#[patch.'https://github.com/HorizenLabs/poly-commit.git']
#poly-commit = { path = '../poly-commit' }
