[package]
name = "api"
version = "0.4.1"
authors = [
    "DanieleDiBenedetto <daniele@horizenlabs.io>",
    "Oleksandr Iozhytsia <oleksandr@zensystem.io>",
    "Volodymyr Babaiev <volodymyr.babaiev@infopulse.com>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = {features = ["tweedle"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development"}
primitives = {features = ["tweedle", "merkle_tree"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development"}

cctp_primitives = { git = "https://github.com/HorizenOfficial/zendoo-cctp-lib.git", branch = "dev" }

#ouroboros = {path = "../ouroboros"}
demo-circuit = {path = "../demo-circuit"}

jni = "=0.19.0"
derivative = "=2.2.0"
lazy_static = "=1.4.0"
radix_trie = "=0.2.1"
rand = { version = "=0.8.4" }
rand_xorshift = { version = "=0.3.0" }
blake2 = { version = "=0.8.1", default-features = false }

[lib]
name = "zendoo_sc"
path = "src/lib.rs"
crate_type = ["cdylib"]

[features]
default = [ "asm" ]
asm = [ "algebra/llvm_asm", "cctp_primitives/asm", "demo-circuit/asm" ]
