[package]
name = "api"
version = "0.5.0"
authors = [
    "DanieleDiBenedetto <daniele@horizenlabs.io>",
    "Oleksandr Iozhytsia <oleksandr@zensystem.io>",
    "Volodymyr Babaiev <volodymyr.babaiev@infopulse.com>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
    "Paolo Tagliaferri <paolotagliaferri@horizenlabs.io>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = {features = ["tweedle"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development"}
primitives = {features = ["tweedle", "merkle_tree"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "feat/concrete_instantiations"}

cctp_primitives = { git = "https://github.com/HorizenOfficial/zendoo-cctp-lib.git", branch = "sync_with_ginger/concrete_types_with_macros" }
r1cs-core = {git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development"}
common-api = { features = ["tweedle", "darlin"], git = "https://github.com/HorizenOfficial/sc_cryptolib_common.git", branch = "sync_with_ginger_type_mappings"} 

#ouroboros = {path = "../ouroboros"}
demo-circuit = {path = "../demo-circuit"}

jni = "=0.19.0"
derivative = "=2.2.0"
lazy_static = "=1.4.0"
radix_trie = "=0.2.1"
rand = { version = "=0.8.4" }
rand_xorshift = { version = "=0.3.0" }
blake2 = { version = "=0.8.1", default-features = false }

[dev-dependencies]
serial_test = "=0.5.1"

[lib]
name = "zendoo_sc"
path = "src/lib.rs"
crate_type = ["cdylib"]

[features]
default = [ "asm" ]
asm = [ "algebra/llvm_asm", "primitives/llvm_asm", "cctp_primitives/asm", "demo-circuit/asm" ]
