[package]
name = "circuit"
version = "0.1.0"
authors = ["DanieleDiBenedetto <daniele@horizenlabs.io>"]
edition = "2018"
include = ["Cargo.toml", "src"]

[dependencies]
algebra = {version = "0.1.0", git = "https://github.com/HorizenLabs/ginger-lib", branch = "circuit_temp" }
crypto-primitives = {version = "0.1.0", git = "https://github.com/HorizenLabs/ginger-lib", branch = "circuit_temp", features = ["r1cs"]}
r1cs-core = {version = "0.1.0", git = "https://github.com/HorizenLabs/ginger-lib", branch = "circuit_temp"}
r1cs-std = {version = "0.1.0", git = "https://github.com/HorizenLabs/ginger-lib", branch = "circuit_temp"}
groth16 = {version = "0.1.0", git = "https://github.com/HorizenLabs/ginger-lib", branch = "circuit_temp"}

digest = "0.7"
blake2s_simd = "0.5"

derivative = "1"
lazy_static = "1"
radix_trie = "0.1"
rand = { version = "0.7" }