[package]
name = "demo-circuit"
version = "0.5.1-SNAPSHOT"
authors = [
    "DanieleDiBenedetto <daniele@horizenlabs.io>",
    "Oleksandr Iozhytsia <oleksandr@zensystem.io>",
    "Volodymyr Babaiev <volodymyr.babaiev@infopulse.com>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
    "Paolo Tagliaferri <paolotagliaferri@horizenlabs.io>"
]
edition = "2018"
include = ["Cargo.toml", "src"]

[dependencies]
algebra = {features = ["tweedle", "ed25519"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development"}
primitives = {features = ["tweedle", "signature", "vrf"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development"}
r1cs-crypto = {features = ["tweedle", "signature", "merkle_tree"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development"}
r1cs-core = {git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development"}
r1cs-std = {features = ["tweedle", "nonnative"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development"}

cctp_primitives = { git = "https://github.com/HorizenOfficial/zendoo-cctp-lib.git", branch = "dev" }

derivative = "=2.2.0"
lazy_static = "=1.4.0"
radix_trie = "=0.2.1"
rand = { version = "=0.8.4" }
blake2 = { version = "=0.8.1", default-features = false }

[dev-dependencies]
digest = "=0.8.1"
blake2s_simd = "=0.5.11"
bit-vec = "=0.6.3"
sha2 = "=0.9.5"
hex = "=0.4.3"
serial_test = "=0.5.1"

[features]
default = [ "asm" ]
asm = [ "algebra/llvm_asm", "cctp_primitives/asm", "primitives/llvm_asm" ]
