[package]
name = "demo-circuit"
version = "0.8.0-SNAPSHOT"
authors = [
    "DanieleDiBenedetto <daniele@horizenlabs.io>",
    "Oleksandr Iozhytsia <oleksandr@zensystem.io>",
    "Volodymyr Babaiev <volodymyr.babaiev@infopulse.com>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
    "Paolo Tagliaferri <paolotagliaferri@horizenlabs.io>",
    "Michele d'Amico <mdamico@horizenlabs.io>",
    "Nicholas Mainardi <nicholas@horizenlbs.io>",
]
edition = "2018"
include = ["Cargo.toml", "src"]

[dependencies]
algebra = { features = [
    "tweedle",
    "ed25519",
], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.6.0" }
primitives = { features = [
    "tweedle",
    "signature",
    "vrf",
], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.6.0" }
r1cs-crypto = { features = [
    "tweedle",
    "signature",
    "merkle_tree",
], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.6.0" }
r1cs-core = { git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.6.0" }
r1cs-std = { features = [
    "tweedle",
    "nonnative",
], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.6.0" }

cctp_primitives = { git = "https://github.com/HorizenOfficial/zendoo-cctp-lib.git", tag = "0.2.1" }

derivative = "2.2.0"
lazy_static = "1.4.0"
radix_trie = "0.2.1"
rand = { version = "0.8.4" }
blake2 = { version = "0.8.1", default-features = false }

[dev-dependencies]
digest = "0.8.1"
blake2s_simd = "0.5.11"
bit-vec = "0.6.3"
sha2 = "0.8.2"
hex = "0.4.3"
serial_test = "0.5.1"
strum = "0.24.1"
strum_macros = "0.24.3"
rstest = { version = "0.17.0", no-default-features = true }

[features]
default = ["asm"]
asm = ["algebra/asm", "cctp_primitives/asm", "primitives/asm"]
