[package]
name = "librustsidechains"
version = "0.1.0"
authors = ["DanieleDiBenedetto <daniele@horizenlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ouroboros = {path = "../ouroboros"}
circuit = {path = "../circuit"}
jni = "0.5.3"
algebra = {version = "0.1.0", path = "../../HL_zexe/algebra"}
crypto-primitives = {version = "0.1.0", path = "../../HL_zexe/crypto-primitives"}
groth16 = {version = "0.1.0", path = "../../HL_zexe/groth16"}
derivative = "1"
radix_trie = "0.1"
rand = { version = "0.7" }
rand_xorshift = { version = "0.2" }

[lib]
crate_type = ["cdylib"]
