[package]
name = "librustsidechains"
version = "0.1.0"
authors = ["DanieleDiBenedetto <daniele@horizenlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = {version = "0.1.0", git = "https://github.com/HorizenLabs/ginger-lib", branch = "circuit_temp"}
crypto-primitives = {version = "0.1.0", git = "https://github.com/HorizenLabs/ginger-lib", branch = "circuit_temp"}
groth16 = {version = "0.1.0", git = "https://github.com/HorizenLabs/ginger-lib", branch = "circuit_temp"}

ouroboros = {path = "../ouroboros"}
circuit = {path = "../circuit"}

jni = "0.5.3"
derivative = "1"
radix_trie = "0.1"
rand = { version = "0.7" }
rand_xorshift = { version = "0.2" }
libc = "0.2"
simplelog = "^0.7.4"
lazy_static = "1"

[lib]
name = "librustsidechains"
path = "src/lib.rs"
crate_type = ["cdylib"]
