[package]
name = "ouroboros"
version = "0.4.1"
authors = ["DanieleDiBenedetto <daniele@horizenlabs.io>"]
edition = "2018"

[dependencies]
algebra = {features = ["tweedle"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "integration"}
primitives = {features = ["tweedle", "vrf"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "integration"}
rand = { version = "=0.8.4" }

[features]
default = [ "asm" ]
asm = [ "algebra/llvm_asm" ]
