[package]
name = "ouroboros"
version = "0.8.0-SNAPSHOT"
authors = ["DanieleDiBenedetto <daniele@horizenlabs.io>"]
edition = "2018"

[dependencies]
algebra = { features = [
    "tweedle",
], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.6.0" }
primitives = { features = [
    "tweedle",
    "vrf",
], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.6.0" }
rand = { version = "0.8.4" }

[features]
default = ["asm"]
asm = ["algebra/asm"]
